--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <div>Right click and "Inspect Element".  Select the Console Tab to see the debugger output.</div>
 
-    <canvas id="gameWorld" width="900" height="700" style="border: 1px solid black; background: sienna"></canvas>
+    <canvas id="gameWorld" width="900" height="700" style="border: 1px solid black; background: sienna" tabindex="1"></canvas>
 </body>
 </html>
