--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <div>Right click and "Inspect Element".  Select the Console Tab to see the debugger output.</div>
 
     <canvas id="gameWorld" width="900" height="700" style="border: 1px solid black; background: sienna" tabindex="1"></canvas>
+    
+    <div id="score" style="position: absolute; left: 700px; top: 30px; width: 200px; height: 30px; background-color: rgba(0,0,0,0); font-family: Arial, Charcoal, sans-serif; font-size: 24pt; color: black; ">
+        Score: 0
+    </div>
 </body>
 </html>
