--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 
     <canvas id="gameWorld" width="900" height="700" style="border: 1px solid black; background: sienna" tabindex="1"></canvas>
     
-    <div id="score" style="position: absolute; left: 700px; top: 30px; width: 200px; height: 30px; background-color: rgba(0,0,0,0); font-family: Arial, Charcoal, sans-serif; font-size: 24pt; color: black; ">
-        Score: 0
+    <div id="gold" style="position: absolute; left: 750px; top: 30px; width: 200px; height: 30px; background-color: rgba(0,0,0,0); font-family: Arial, Charcoal, sans-serif; font-size: 24pt; color: gold; ">
+        Gold: 0
+    </div>
+	
+	<div id="kp" style="position: absolute; left: 10px; top: 30px; width: 800px; height: 30px; background-color: rgba(0,0,0,0); font-family: Arial, Charcoal, sans-serif; font-size: 24pt; color: red; ">
+        Kill Points: 0
     </div>
 </body>
 </html>
