--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
         Gold: 0
     </div>
 	
-	<div id="kp" style="position: absolute; left: 10px; top: 30px; width: 800px; height: 30px; background-color: rgba(0,0,0,0); font-family: Arial, Charcoal, sans-serif; font-size: 24pt; color: red; ">
+	<div id="kp" style="position: absolute; left: 10px; top: 30px; width: 300px; height: 30px; background-color: rgba(0,0,0,0); font-family: Arial, Charcoal, sans-serif; font-size: 24pt; color: red; ">
         Kill Points: 0
+    </div>
+	
+	<div id="towerHealth" style="position: absolute; left: 350px; top: 30px; width: 300px; height: 30px; background-color: rgba(0,0,0,0); font-family: Arial, Charcoal, sans-serif; font-size: 24pt; color: green; ">
+        Tower Health: 100
     </div>
 </body>
 </html>
