--- a/index.html
+++ b/index.html
@@ -22,5 +22,13 @@
 	<div id="towerHealth" style="position: absolute; left: 350px; top: 30px; width: 300px; height: 30px; background-color: rgba(0,0,0,0); font-family: Arial, Charcoal, sans-serif; font-size: 24pt; color: green; ">
         Tower Health: 100
     </div>
+    
+    <div id="introText" style="position: absolute; left: 280px; top: 300px; width: 400px; height: 100px; font-size: 30pt; color: black">
+    	Click to start the game...
+    </div>
+    
+    <div id="gameOverText" style="position: absolute; left: 280px; top: 300px; width: 400px; height: 100px; font-size: 30pt; color: black">
+
+    </div>
 </body>
 </html>
